--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="bootstrap" Version="5.3.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CCSMDataManager\CCSMDataManager.csproj" />
   </ItemGroup>
 
 </Project>
