Envia relatorios para o DB
Arruma  view e metodos para enviar os relatórios para o banco de dados

--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\CCSMDataManager\CCSMDataManager.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Relatorios\" />
+  </ItemGroup>
+
 </Project>
